--- a/pages/B-0-0_av3.md
+++ b/pages/B-0-0_av3.md
@@ -1,7 +1,9 @@
-Multimediaproductie
--------------------
+Profiel
+-------
 
-### "Produceren" van interactieve digitale producten:
+### Domein Audio, Video & 3D (AV3)
+
+#### "Produceren" van interactieve digitale producten:
 
  - ...  
    <small>...</small>
