--- a/pages/B-0-0_av3.md
+++ b/pages/B-0-0_av3.md
@@ -3,12 +3,10 @@ Profiel
 
 ### Domein Audio, Video & 3D (AV3)
 
-#### "Produceren" van interactieve digitale producten:
+#### "Produceren" van interactieve audiovisuele producten:
 
- - ...  
-   <small>...</small>
- - ... 
-   <small>...</small>
+- Corporate & Video communicatie  
+<small>Bedrijfsfilms, videopresentaties, visualisaties, explainer movies, ... .</small>
 
 > Zowel het **bedenken** van het concept,  
 > het **produceren** van de animaties en films,  
