--- a/pages/B-0-0_av3.md
+++ b/pages/B-0-0_av3.md
@@ -1,12 +1,12 @@
 Profiel
 -------
 
-### Domein Audio, Video & 3D (AV3)
+### Domein *Audio, Video & 3D* (AV3)
 
 #### "Produceren" van interactieve audiovisuele producten:
 
 - Corporate & Video communicatie  
-<small>Bedrijfsfilms, videopresentaties, visualisaties, explainer movies, ... .</small>
+<small>Bedrijfsfilms, videopresentaties, visualisaties, explainer movies, …</small>
 
 > Zowel het **bedenken** van het concept,  
 > het **produceren** van de animaties en films,  
