--- a/pages/0-0-0__gdm.md
+++ b/pages/0-0-0__gdm.md
@@ -5,4 +5,10 @@ Multimediaproductie
 Bachelor in de **grafische en digitale media**
 ----------------------------------------------
 ### [Arteveldehogeschool](http://www.arteveldehogeschool.be)
+#### Academiejaar 2016-2017
 </small>
+
+### Nieuwe Keuzetrajecten:
+
+ - Audiovideo Creation (AVC)
+ - New Media Development (NMD)
