--- a/pages/0-0-0__gdm.md
+++ b/pages/0-0-0__gdm.md
@@ -10,5 +10,5 @@ Bachelor in de **grafische en digitale media**
 
 ### Nieuwe Keuzetrajecten:
 
- - Audiovideo Creation (AVC)
+ - Audiovisual Design (AVD)
  - New Media Development (NMD)
